--- a/style.css
+++ b/style.css
@@ -459,6 +459,7 @@
  .footer-social a{
     color: white;
     margin-right: 10px;
+    margin-top: 15px;
  }
  .subscribe-bnt{
     margin-top: 15px;
